# Capstone-hybrid-project

./: README.md
hybrid/: hybrid_inventory_manager.cpp  suyash.cpp
inventory_manager/: CMakeLists.txt  Makefile  README.md  inventory_manager
inventory_manager/include/: InventoryManager.hpp  inventory.h
inventory_manager/src/: InventoryManager.cpp  inventory.c  main.cpp
